fixed modal with animation set z-index to negative

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -14,7 +14,9 @@ a:hover {
 }  
 
 
-
+.profile-dropdown {
+    color: white;
+}
 
 #logo {
     width: 80px;
@@ -54,6 +56,8 @@ a {
     width: 100%;
     justify-content: flex-end;
     padding: 20px;
+    font-family: 'Fredoka', sans-serif;
+
 }
 
 
